# vtol-hud-viewpro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  flake.nix  gimbal_config.json  rebuild-mavsdk.fish  rebuild-mavsdk.sh  setup-arch.fish  setup-arch.sh  setup-ubuntu.sh
sdk/: ViewLink.h  sdk_stub.cpp
src/: main.cpp
src/gimbal/: application_manager.cpp  application_manager.h  command_handler.cpp  command_handler.h  config_manager.cpp  config_manager.h  control_stream.cpp  control_stream.h  gimbal.cpp  gimbal.h  gimbal_config.h  joystick_handler.cpp  joystick_handler.h  keyboard_handler.cpp  keyboard_handler.h  mavlink_stream.cpp  mavlink_stream.h  telemetry_stream.cpp  telemetry_stream.h  video_stream.cpp  video_stream.h  viewlink_stub.cpp
src/ui/: main_window.cpp  main_window.h
src/ui/widgets/buttons/: connection_button.cpp  connection_button.h  control_button.cpp  control_button.h  direction_button.cpp  direction_button.h  telemetry_button.cpp  telemetry_button.h
src/ui/widgets/lrf/: laser_range_widget.cpp  laser_range_widget.h
src/ui/widgets/panels/: connection_panel.cpp  connection_panel.h  control_panel.cpp  control_panel.h  direction_panel.cpp  direction_panel.h  flight_info_widget.cpp  flight_info_widget.h  telemetry_panel.cpp  telemetry_panel.h
src/ui/widgets/panels/connection/: connect_toggle.cpp  connect_toggle.h  connection_panel.cpp  connection_panel.h  ip_address_input.cpp  ip_address_input.h  port_input.cpp  port_input.h
src/ui/widgets/panels/control/: control_panel.cpp  control_panel.h  subpanel_camera.cpp  subpanel_camera.h  subpanel_lrf.cpp  subpanel_lrf.h  subpanel_movement.cpp  subpanel_movement.h
src/ui/widgets/panels/control/camera/: subpanel_camera.cpp  subpanel_camera.h  toggle_switch.cpp  toggle_switch.h  zoom_button.cpp  zoom_button.h
src/ui/widgets/panels/control/lrf/: subpanel_lrf.cpp  subpanel_lrf.h
src/ui/widgets/panels/control/movement/: action_button.cpp  action_button.h  arrow_button.cpp  arrow_button.h  subpanel_movement.cpp  subpanel_movement.h  toggle_button.cpp  toggle_button.h
src/ui/widgets/panels/telemetry/: telemetry_panel.cpp
src/ui/widgets/titles/: close_widget.cpp  close_widget.h  hide_widget.cpp  hide_widget.h  resize_widget.cpp  resize_widget.h
src/ui/widgets/transparent/: transparent_widget.cpp  transparent_widget.h
src/ui/widgets/video/: video_widget.cpp  video_widget.h
